--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-python-dotenv
-streamlit==1.47.1
-pillow
-firebase-admin==7.1.0
-fastapi==0.116.1
-uvicorn==0.35.0
-python-multipart
-requests
-folium
-langchain
-langchain_ollama
-streamlit_geolocation
-streamlit_folium
-pydantic==2.11.7
-ollama
-google-generativeai
+streamlit==1.35.0
+pillow==10.2.0
+firebase-admin==6.4.0
+fastapi==0.111.0
+uvicorn==0.29.0
+python-multipart==0.0.9
+requests==2.31.0
+folium==0.14.0
+langchain==0.2.0
+langchain_ollama==0.0.6
+streamlit_geolocation==0.0.8
+streamlit_folium==0.10.0
+pydantic==2.7.1
+ollama==0.1.7
+google-generativeai==0.8.5
