--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
---constraint constraints.txt
-
-streamlit
-pillow
-firebase-admin
-fastapi
-uvicorn
-python-multipart
-requests
-folium
-langchain
-langchain_ollama
-streamlit_geolocation
-streamlit_folium
-pydantic
-ollama
-google-generativeai
+streamlit==1.29.0
+pillow==10.1.0
+firebase-admin==6.1.0
+fastapi==0.100.0
+uvicorn==0.25.0
+python-multipart==0.0.6
+requests==2.28.2
+folium==0.13.0
+langchain==0.1.14
+langchain_ollama==0.0.3
+streamlit_geolocation==0.0.7
+streamlit_folium==0.9.0
+pydantic==2.3.0
+ollama==0.1.3
+google-generativeai==0.6.1
