--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-streamlit==1.32.2
-pillow==10.1.0
-firebase-admin==6.2.0
-fastapi==0.103.1
-uvicorn==0.22.0
-python-multipart==0.0.9
-requests==2.31.0
-folium==0.14.0
-langchain==0.1.17
-streamlit_geolocation==0.0.8
-streamlit_folium==0.10.0
-pydantic==1.10.13
-google-generativeai==0.8.5
-
+python==3.13.4
+streamlit==1.47.1
+pillow
+firebase-admin==7.1.0
+fastapi==0.116.1
+uvicorn==0.35.0
+python-multipart
+requests
+folium
+langchain
+streamlit_geolocation
+streamlit_folium
+pydantic==2.11.7
+google-generativeai
